--- a/src/app/components/floor-map/floor-map.component.scss
+++ b/src/app/components/floor-map/floor-map.component.scss
@@ -161,6 +161,10 @@
 
       .desk-group {
         pointer-events: all;
+
+        &.hidden {
+          display: none;
+        }
       }
 
       .desk-circle {
